--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,7 +84,8 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "xtree": "cpp"
     },
     "C_Cpp.default.compilerPath": "cl.exe"
 }
